# spending-check

./: .gitignore
contoso-backend/: .dockerignore  .env.product  Dockerfile  README.md  docker-compose.yml  pyproject.toml
contoso-backend/db/: init.sql
contoso-backend/src/: main.py
contoso-backend/src/config/: config.py  database.py
contoso-backend/src/endpoints/: __init__.py  auth.py  employees.py  tickets.py
contoso-backend/src/models/: models.py
contoso-backend/src/repository/: __init__.py  crud.py
contoso-backend/src/schemas/: schemas.py
contoso-backend/src/security/: auth.py
contoso-backend/src/services/: __init__.py  auth.py  employee_service.py  ticket_service.py  user_service.py
contoso-backend/src/utils/: __init__.py  common.py
contoso-frontend/: modern.config.ts  package.json  pnpm-lock.yaml
contoso-frontend/src/api/: client.ts
contoso-frontend/src/components/: Nav.tsx
contoso-frontend/src/routes/: index.css  layout.tsx  page.tsx
contoso-frontend/src/routes/employees/: page.module.css  page.tsx
contoso-frontend/src/routes/tickets/: page.module.css  page.tsx
contoso-frontend/src/routes/tickets/create/: page.module.css  page.tsx
contoso-frontend/src/services/: auth.ts
