[project]
name = "contoso-backend"
version = "0.1.0"
requires-python = ">=3.12"  # 明确 Python 版本要求
dependencies = [
    "fastapi~=0.111.0",
    "uvicorn[standard]~=0.29.0",
    "sqlalchemy[asyncio]~=2.0.30",
    "asyncpg~=0.29.0",
    "pydantic-settings~=2.2.1",
    "passlib~=1.7.4",
    "python-jose[cryptography]~=3.3.0",
    "argon2-cffi~=21.3.0",
    "click>=8.3.0",
]

[tool.hatch.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
